<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eic_bringup_utils</name>
  <version>0.0.0</version>
  <description>Scripts to launch SLAM and Navigation on AMR</description>
  <maintainer email="support@einfochips.com">Einfochips pvt ltd</maintainer>
  <license>Apache2.0</license>
  <license>BSD-3</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
